[FIX] Wrong background image url.

--- a/mods/trunk/themes/clubcard/styles/clubcard.css
+++ b/mods/trunk/themes/clubcard/styles/clubcard.css
@@ -304,7 +304,7 @@ input[type=submit]:hover,
 #menu a {
 	display: block;
 	padding: 10px 20px 0px 20px;
-	background: url(images/img03.jpg) no-repeat right 18px;
+	background: url(clubcard/img03.jpg) no-repeat right 18px;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 11px;
